# Energy-EVA

./: .gitignore  LICENSE  README.md  pyproject.toml
Core/Utils/: data_processing.py  file_helper.py  normalize_util.py  random_utils.py
agentx_bench/: README.md  __init__.py  benchmark_tasks.py  evaluation.py
agentx_bench/evaluation_methods/: __init__.py  energent_swarm_service.py
agentx_bench/evaluation_utils/: __init__.py  artifacts.py  case_loader.py  client.py  models.py  progress.py  rendering.py  scoring.py
evaluation_results/leaderboard/: load_dataset_path_active_power_load.csv  load_dataset_path_aemo.csv  load_dataset_path_entsoe.csv  load_dataset_path_icsuci.csv  load_overview.csv  price_dataset_path_R1_Sim.csv  price_dataset_path_R2_Sim.csv  price_dataset_path_R3_Sim.csv  price_overview.csv  solar_dataset_path_csg_forecast_competition.csv  solar_dataset_path_mendeley.csv  solar_dataset_path_pvod.csv  solar_dataset_path_solete.csv  solar_overview.csv  wind_dataset_path_csg_forecast_competition.csv  wind_dataset_path_europe_offshore_wind.csv  wind_dataset_path_mendeley.csv  wind_overview.csv
evaluation_results/load/: EnergyTS_V2.0.csv  EnergyTS_V3.0.csv  chronos-2.csv  chronos-bolt-base.csv  dummy_model.csv  moirai_1.1_R_large.csv  moirai_2.0_R_small.csv  sundial_base_128m.csv  timesfm2.5_xreg_early.csv  timesfm2_xreg_early.csv  tirex.csv  toto_151m.csv  toto_2.0_2.5B.csv
evaluation_results/price/: EnergyTS_V3.0.csv  tirex.csv  (+6 more)
time_series_portal/: benchmark_tasks.py  config.py  evaluation.py  leaderboard_generate.py  visualize_multi_model_results.py
(+1102 files in other folders)
